--- a/chessboard.css
+++ b/chessboard.css
@@ -1,6 +1,4 @@
 .chessboard {
-    /*max-width: 480;
-    max-height: 480;*/
     width: 100%;
     height: 100%;
     margin: auto;
@@ -8,20 +6,65 @@
     box-sizing: border-box;
     background-image: url('./images/chess-board.webp');
     background-size: 100% 100%;
-
     background-repeat: no-repeat;
 }
 
-.wp {
-
-    /*width: 60px;
-    height: 60px;*/
+.cp {
     width: 12.5%;
     height: 12.5%;
-    background-image: url('./images/wp.webp');
     background-size: cover;
     position: absolute;
 }
+
+.wp {
+    background-image: url('./images/wp.webp');
+}
+
+.wb {
+    background-image: url('./images/wb.webp');
+}
+
+.wq {
+    background-image: url('./images/wq.webp');
+}
+
+.wk {
+    background-image: url('./images/wk.webp');
+}
+
+.wn {
+    background-image: url('./images/wn.webp');
+}
+
+.wr {
+    background-image: url('./images/wr.webp');
+}
+
+.br {
+    background-image: url('./images/br.webp');
+}
+
+.bn {
+    background-image: url('./images/bn.webp');
+}
+
+.bb {
+    background-image: url('./images/bb.webp');
+}
+
+.bq {
+    background-image: url('./images/bq.webp');
+}
+
+.bk {
+    background-image: url('./images/bk.webp');
+}
+
+.bp {
+    background-image: url('./images/bp.webp');
+}
+
+
 
 #root {
     display: flex;
@@ -30,4 +73,3 @@
     width: 100%;
     height: 100%;
 }
-
