--- a/chessboard.css
+++ b/chessboard.css
@@ -14,6 +14,7 @@
     height: 12.5%;
     background-size: cover;
     position: absolute;
+    z-index: 2;
 }
 
 .wp {
@@ -64,8 +65,9 @@
     background-image: url('./images/bp.webp');
 }
 
-.previous {
+.target-move {
     background-color: rgb(186, 202, 43);
+    z-index: 1;
 }
 
 
